--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -28,9 +28,11 @@
 
     {% render 'meta-tags' %}
 
+    <script src="{{ 'swiper-bundle.min.js' | asset_url }}" defer="defer"></script>
     <script src="{{ 'constants.js' | asset_url }}" defer="defer"></script>
     <script src="{{ 'pubsub.js' | asset_url }}" defer="defer"></script>
     <script src="{{ 'global.js' | asset_url }}" defer="defer"></script>
+    <script src="{{ 'custom.js' | asset_url }}" defer="defer"></script>
     {%- if settings.animations_reveal_on_scroll -%}
       <script src="{{ 'animations.js' | asset_url }}" defer="defer"></script>
     {%- endif -%}
@@ -232,6 +234,7 @@
 
       body {
         display: grid;
+        overflow-x: hidden;
         grid-template-rows: auto auto 1fr auto;
         grid-template-columns: 100%;
         min-height: 100%;
@@ -251,6 +254,8 @@
       }
     {% endstyle %}
 
+
+    {{ 'swiper-bundle.min.css' | asset_url | stylesheet_tag }}
     {{ 'base.css' | asset_url | stylesheet_tag }}
 
     {%- unless settings.type_body_font.system? -%}
