--- a/assets/base.css
+++ b/assets/base.css
@@ -479,7 +479,7 @@ table:not([class]) th {
 a:empty,
 ul:empty,
 dl:empty,
-div:empty,
+div:empty:not(.swiper-scrollbar-drag),
 section:empty,
 article:empty,
 p:empty,
