--- a/assets/section-products-slider.css
+++ b/assets/section-products-slider.css
@@ -39,13 +39,15 @@
 }
 
 .slider-top {
+    display: flex;
     flex-direction: column;
     margin: 40px 0;
 }
 
 @media (min-width: 768px) {
-    .slider-main__slider::after {
+    .slider-top {
         display: flex;
+        flex-direction: row;
         justify-content: space-between;
         align-items: center;
         margin: 60px 0;
