--- a/sections/chronic-blog.liquid
+++ b/sections/chronic-blog.liquid
@@ -15,7 +15,8 @@
 {%- endstyle -%}
 
 <div class="chronic-blog section-{{ section.id }}">
-    <div class="container">
+  {% comment %} This section does not need a container {% endcomment %}
+    <div class="">
         <div class="chronic-blog__wrapper">
             <div class="chronic-blog__leftside leftside-blog">
             <div class="leftside-blog__video blog-video">
