--- a/assets/section-chronic-blog.css
+++ b/assets/section-chronic-blog.css
@@ -122,6 +122,7 @@
     display: flex;
     align-items: stretch;
     border: 1px solid rgba(48, 49, 57, 1);
+    border-right: 0;
 }
 
 .blog-item:not(:last-child) {
