--- a/sections/products-slider.liquid
+++ b/sections/products-slider.liquid
@@ -17,26 +17,37 @@
 <div class="products-slider section-{{ section.id }}">
   <div class="container">
     <div class="products-slider__top slider-top">
-      <h2 class="slider-top__title">recommendations for you</h2>
-      <a class="slider-top__link" href="#">Shop now</a>
+      <div class="slider-top__info">
+        <h2 class="slider-top__title">recommendations for you</h2>
+        <a class="slider-top__link" href="#">Shop now</a>
+      </div>
+      <div class="slider-top__controls controls">
+        <button type="button" class="slider-top__button slider-top__button-prev slider__button_prev slider__button">
+            {% render 'icon-slider-arrow' %}
+        </button>
+        <button type="button" class="slider-top__button slider-top__button-next slider__button_next slider__button">
+          {% render 'icon-slider-arrow' %}
+        </button>
+      </div>
     </div>
     <div class="products-slider__main slider-main">
       <div class="slider-main__slider">
         <div class="slider-main__wrapper swiper-wrapper">
-          {% for block in section.blocks %}
-          <div class="slider-main__slide slider-slide swiper-slide">
-              <div class="slider-slide__wrapper">
-                <div class="slider-slide__image">
-                {% if block.settings.image != blank %}
-                  {{ block.settings.image | image_url: width: 346 | image_tag }}
-                {% endif %}
+          {%- for block in section.blocks -%}
+            <div class="slider-main__slide slider-slide swiper-slide">
+                <div class="slider-slide__wrapper">
+                  <div class="slider-slide__image">
+                    {% if block.settings.image != blank %}
+                      {{ block.settings.image | image_url: width: 346 | image_tag }}
+                    {% endif %}
+                    <a href="#" class="slider-slide__button button">Add to cart</a>
+                  </div>
+                  <h3 class="slider-slide__title">{{ block.settings.title }}</h3>
+                  <p class="slider-slide__nickname">{{ block.settings.description }}</p>
+                  <p class="slider-slide__price">{{ block.settings.price }}</p>
                 </div>
-                <h3 class="slider-slide__title">{{ block.settings.title }}</h3>
-                <p class="slider-slide__nickname">{{ block.settings.description }}</p>
-                <p class="slider-slide__price">{{ block.settings.price }}</p>
-              </div>
-          </div>
-          {% endfor %}
+            </div>
+          {%- endfor -%}
           {% comment %} <div class="slider-main__slide slider-slide swiper-slide">Slide 2</div>
           <div class="slider-main__slide slider-slide swiper-slide">Slide 3</div>
           <div class="slider-main__slide slider-slide swiper-slide">Slide 4</div>
