--- a/assets/section-products-slider.css
+++ b/assets/section-products-slider.css
@@ -192,7 +192,7 @@
     right: 0;
     bottom: 0;
     left: 0;
-    width: 100%;
+    width: auto;
     height: auto;
     padding: 0;
     color: #011C27;
