--- a/assets/section-products-slider.css
+++ b/assets/section-products-slider.css
@@ -188,6 +188,9 @@
 
 .slider-slide__button {
     position: absolute;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
     top: unset;
     right: 0;
     bottom: 0;
