Edits for hero-banner (v1.1), Blog(v1.3), Testimonials(v1.1)

--- a/assets/section-chronic-blog.css
+++ b/assets/section-chronic-blog.css
@@ -110,6 +110,9 @@
 }
 
 .leftside-blog__button {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
     width: fit-content;
 }
 
