--- a/assets/section-hero-banner.css
+++ b/assets/section-hero-banner.css
@@ -143,4 +143,9 @@
 }
 
 .hero-banner__button {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: fit-content;
+    margin: 0 auto;
 }
