--- a/assets/section-chronic-blog.css
+++ b/assets/section-chronic-blog.css
@@ -206,4 +206,9 @@
 }
 
 .blog-item__link {
+    color: rgba(186, 149, 96, 1);
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 20px;
+    margin: 0;
 }
