--- a/sections/chronic-blog.liquid
+++ b/sections/chronic-blog.liquid
@@ -50,7 +50,7 @@
                         <p class="blog-item__desc">
                           {{ block.settings.item_desc |  truncate: 105 }}
                         </p>
-                        <a href="{{ block.settings.item_link_url }}" class="blog-item__link link">{{ block.settings.item_link_text }}</a>
+                        <a href="{{ block.settings.item_link_url }}" class="blog-item__link">{{ block.settings.item_link_text }}</a>
                       </div>
                     </div>
                 </div>
