--- a/sections/products-slider-old.liquid
+++ b/sections/products-slider-old.liquid
@@ -4,7 +4,7 @@
   <div class="container">
     <div class="products-slider__top slider-top">
       <h2 class="slider-top__title">recommendations for you</h2>
-      <a class="slider-top__link" href="#">Shop now</a>
+      <a class="slider-top__link slider-link" href="#">Shop now</a>
     </div>
     <div class="products-slider__main slider-main">
       <div class="slider-main__slider">
