--- a/sections/products-slider.liquid
+++ b/sections/products-slider.liquid
@@ -19,7 +19,7 @@
     <div class="products-slider__top slider-top">
       <div class="slider-top__info">
         <h2 class="slider-top__title">recommendations for you</h2>
-        <a class="slider-top__link" href="#">Shop now</a>
+        <a class="slider-top__link slider-link" href="#">Shop now</a>
       </div>
       <div class="slider-top__controls controls">
         <button type="button" class="slider-top__button slider-top__button-prev slider__button_prev slider__button">
