--- a/sections/products-slider.liquid
+++ b/sections/products-slider.liquid
@@ -16,10 +16,14 @@
 
 <div class="products-slider section-{{ section.id }}">
   <div class="container">
-    <div class="products-slider__top slider-top">
-      <div class="slider-top__info">
+    <div class="products-slider__top section__header-indent slider-top">
+      {% comment %} <div class="slider-top__info">
         <h2 class="slider-top__title">recommendations for you</h2>
         <a class="slider-top__link slider-link" href="#">Shop now</a>
+      </div> {% endcomment %}
+      <div class="section__header">
+        <h2 class="section__title">recommendations for you</h2>
+        <a class="section__link section-link" href="#">Shop now</a>
       </div>
       <div class="slider-top__controls controls">
         <button type="button" class="slider-top__button slider-top__button-prev slider__button_prev slider__button">
