--- a/assets/section-footer-new.css
+++ b/assets/section-footer-new.css
@@ -9,7 +9,7 @@
 .footer-new__top {
     flex-direction: column;
     align-items: flex-start;
-    padding: 80px 0 113px 0;
+    padding: clamp(3.125rem, 1.6526rem + 6.2823vw, 8.4375rem) 0 clamp(2.375rem, -0.362rem + 11.6778vw, 12.25rem) 0;
 }
 
 @media (min-width: 992px) {
@@ -41,13 +41,29 @@
 .footer-new__menu {
 }
 
-.top-footer .footer-block__heading {
+.top-footer .footer-block__newsletter .footer-block__heading {
     color: var(--rich-black-color);
-    font-size: 16px;
+    font-size: clamp(1.375rem, 1.2364rem + 0.5913vw, 1.875rem);
     font-weight: 700;
     line-height: normal;
     text-transform: uppercase;
-    margin: 0 0 36px 0;
+    margin: 0 0 clamp(1.6875rem, 1.1159rem + 2.439vw, 3.75rem) 0;
+    text-align: center;
+}
+
+
+@media (min-width: 768px) {
+    .top-footer .footer-block__newsletter .footer-block__heading {
+        text-align: left;
+        font-size: 18px;
+        margin: 0 0 clamp(1.6875rem, 1.1159rem + 2.439vw, 3.75rem) 0;
+    }
+}
+
+@media (min-width: 992px) {
+    .top-footer .footer-block__newsletter .footer-block__heading {
+        margin: 0 0 36px 0;
+    }
 }
 
 .top-footer .newsletter-form {
@@ -73,10 +89,20 @@
 }
 
 .top-footer__title {
+    font-size: clamp(1.375rem, 1.2364rem + 0.5913vw, 1.875rem);
+    line-height: normal;
     color: var(--rich-black-color) !important;
     font-weight: 700;
     line-height: normal;
     text-transform: uppercase;
+    margin: 0 0 clamp(1.6875rem, 1.1159rem + 2.439vw, 3.75rem) 0;
+}
+
+@media (min-width: 992px) {
+    .top-footer__title {
+        font-size: 18px;
+        margin: 0 0 36px 0;
+    }
 }
 
 .top-footer__item a {
@@ -97,10 +123,26 @@
     color: var(--ghost-white-color) !important;
     font-size: 16px;
     line-height: normal;
+    transition: unset !important;
+}
+
+.top-footer__form-button:hover {
+    background: var(--golden-color) !important;
+    color: var(--ghost-white-color) !important;
+    box-shadow: none !important;
+    outline: 0 !important;
+    border: 0 !important;
 }
 
 .top-footer__item:not(:last-child) {
-    margin: 0 0 14px 0;
+    margin: 0 0 clamp(1.1875rem, 1.1355rem + 0.2217vw, 1.375rem) 0;
+}
+
+@media (min-width: 992px) {
+    .top-footer__item:not(:last-child) {
+        margin: 0 0 14px 0;
+    }
+    
 }
 
 .top-footer__field {
@@ -111,16 +153,35 @@
     background-color: var(--ghost-white-color) !important;
 }
 
+.top-footer__field .field__input {
+    padding: 2.2rem 1.5rem 0.8rem 1rem !important;
+    left: 1rem;
+}
+
+@media (min-width: 768px) {
+    .top-footer__field .field__input {
+        padding: 2.2rem 1.5rem 0.8rem 1.5rem !important;
+    }
+}
+
 .top-footer__label {
     top: unset;
-    font-size: 24px;
+    font-size: clamp(1.6875rem, 1.393rem + 1.2565vw, 2.75rem);
     line-height: normal;
     font-weight: 500;
     color: var(--grey-color);
+    letter-spacing: 0;
+    left: 10px;
+}
+
+@media (min-width: 992px) {
+    .top-footer__label {
+        font-size: 24px;
+    }
 }
 
 .top-footer__input {
-    padding: 0 !important;
+    /* padding: 0 !important; */
     margin: 0 !important;
 }
 
@@ -145,7 +206,7 @@
     gap: 40px;
 }
 
-@media (min-width: 992px) {
+@media (min-width: 768px) {
     .top-footer .footer__list-social-new {
         justify-content: flex-start !important;
     }
@@ -174,15 +235,38 @@
 }
 
 .bottom-footer__menu {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
+    display: grid;
+    grid-template-columns: repeat(2, auto);
     row-gap: 20px;
     column-gap: 60px;
 }
 
+@media (min-width: 576px) {
+    .bottom-footer__menu {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-wrap: wrap;
+        justify-content: flex-start;
+    }
+}
+
+@media (min-width: 768px) {
+    .bottom-footer__menu {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-wrap: wrap;
+        justify-content: flex-start;
+    }
+}
+
 .bottom-footer__menu a {
     color: inherit;
+}
+
+.bottom-footer__menu li {
+    align-self: center;
 }
 
 .bottom-footer__container {
@@ -205,17 +289,48 @@
 }
 
 .bottom-footer__container .copyright__content,
-.bottom-footer__menu .list-menu__item {
-    font-size: 16px;
+.bottom-footer__menu .list-menu__item,
+.footer__localization .country-selector__disclosure .disclosure__button {
+    font-size: clamp(1.375rem, 1.3057rem + 0.2956vw, 1.625rem);
     font-weight: 500;
     line-height: normal;
     padding: 0;
+}
+
+@media (min-width: 992px) {
+    .bottom-footer__container .copyright__content,
+    .bottom-footer__menu .list-menu__item,
+    .footer__localization .country-selector__disclosure .disclosure__button {
+        font-size: 16px;
+    }
 }
 
 .bottom-footer__container .copyright__content a {
     text-decoration: none;
 }
 
-.bottom-footer .link--text:hover {
+.bottom-footer .link--text:hover:not(.disclosure__link) {
     color: var(--ghost-white-color);
+}
+
+.footer__localization .country-selector__disclosure .disclosure__button {
+    background: transparent !important;
+    margin: 0;
+    padding: 0 4rem 0 0;
+    color: var(--ghost-white) !important;
+}
+
+.footer__localization .localization-form {
+    padding: 0;
+    margin: 0;
+}
+
+.footer__localization .country-selector__disclosure {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+
+.footer__localization .country-selector__disclosure .disclosure__list-wrapper {
+    color: initial;
 }
