--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -163,8 +163,92 @@
 
       <div class="footer-new__bottom bottom-footer">
         <div class="bottom-footer__container container">
-                {% comment %} {% for block in section.blocks %} {% endcomment %}
+          
+          {% comment %} {% for block in section.blocks %} {% endcomment %}
         <ul class="footer-block__details-content list-unstyled bottom-footer__menu">
+          <div class="footer__column footer__localization isolate">
+            {%- if section.settings.enable_country_selector and localization.available_countries.size > 1 -%}
+              <noscript>
+                {%- form 'localization', id: 'FooterCountryFormNoScript', class: 'localization-form' -%}
+                  <div class="localization-form__select">
+                    <h2 class="visually-hidden" id="FooterCountryLabelNoScript">{{ 'localization.country_label' | t }}</h2>
+                    <select
+                      class="localization-selector link"
+                      name="country_code"
+                      aria-labelledby="FooterCountryLabelNoScript"
+                    >
+                      {%- for country in localization.available_countries -%}
+                        <option
+                          value="{{ country.iso_code }}"
+                          {%- if country.iso_code == localization.country.iso_code %}
+                            selected
+                          {% endif %}
+                        >
+                          {{ country.name }} ({{ country.currency.iso_code }}
+                          {{ country.currency.symbol }})
+                        </option>
+                      {%- endfor -%}
+                    </select>
+                    {% render 'icon-caret' %}
+                  </div>
+                  <button class="button button--tertiary">{{ 'localization.update_country' | t }}</button>
+                {%- endform -%}
+              </noscript>
+              <localization-form>
+                {%- form 'localization', id: 'FooterCountryForm', class: 'localization-form' -%}
+                  <div class="no-js-hidden">
+                    {% if false %}
+                      <h2 class="caption-large text-body" id="FooterCountryLabel">{{ 'localization.country_label' | t }}</h2>
+                    {% endif %}
+                    {%- render 'country-localization', localPosition: 'AnnouncementCountry', show_location_icon: false, custom_class: 'country-selector__disclosure' -%}
+                    {% comment %} {%- render 'country-localization', localPosition: 'FooterCountry' -%} {% endcomment %}
+                  </div>
+                {%- endform -%}
+              </localization-form>
+            {%- endif -%}
+    
+            {%- if section.settings.enable_language_selector and localization.available_languages.size > 1 -%}
+              <noscript>
+                {%- form 'localization', id: 'FooterLanguageFormNoScript', class: 'localization-form' -%}
+                  <div class="localization-form__select">
+                    <h2 class="visually-hidden" id="FooterLanguageLabelNoScript">
+                      {{ 'localization.language_label' | t }}
+                    </h2>
+                    <select
+                      class="localization-selector link"
+                      name="locale_code"
+                      aria-labelledby="FooterLanguageLabelNoScript"
+                    >
+                      {%- for language in localization.available_languages -%}
+                        <option
+                          value="{{ language.iso_code }}"
+                          lang="{{ language.iso_code }}"
+                          {%- if language.iso_code == localization.language.iso_code %}
+                            selected
+                          {% endif %}
+                        >
+                          {{ language.endonym_name | capitalize }}
+                        </option>
+                      {%- endfor -%}
+                    </select>
+                    {% render 'icon-caret' %}
+                  </div>
+                  <button class="button button--tertiary">{{ 'localization.update_language' | t }}</button>
+                {%- endform -%}
+              </noscript>
+    
+              <localization-form>
+                {%- form 'localization', id: 'FooterLanguageForm', class: 'localization-form' -%}
+                  <div class="no-js-hidden">
+                    <h2 class="caption-large text-body" id="FooterLanguageLabel">
+                      {{ 'localization.language_label' | t }}
+                    </h2>
+                    {%- render 'language-localization', localPosition: 'FooterLanguage' -%}
+                  </div>
+                {%- endform -%}
+              </localization-form>
+            {%- endif -%}
+          </div>
           {%- for link in section.settings.menu_second.links -%}
             <li>
               <a
@@ -197,86 +281,6 @@
         </ul>
       {% comment %} {% endfor %} {% endcomment %}
 
-        <div class="footer__column footer__localization isolate">
-          {%- if section.settings.enable_country_selector and localization.available_countries.size > 1 -%}
-            <noscript>
-              {%- form 'localization', id: 'FooterCountryFormNoScript', class: 'localization-form' -%}
-                <div class="localization-form__select">
-                  <h2 class="visually-hidden" id="FooterCountryLabelNoScript">{{ 'localization.country_label' | t }}</h2>
-                  <select
-                    class="localization-selector link"
-                    name="country_code"
-                    aria-labelledby="FooterCountryLabelNoScript"
-                  >
-                    {%- for country in localization.available_countries -%}
-                      <option
-                        value="{{ country.iso_code }}"
-                        {%- if country.iso_code == localization.country.iso_code %}
-                          selected
-                        {% endif %}
-                      >
-                        {{ country.name }} ({{ country.currency.iso_code }}
-                        {{ country.currency.symbol }})
-                      </option>
-                    {%- endfor -%}
-                  </select>
-                  {% render 'icon-caret' %}
-                </div>
-                <button class="button button--tertiary">{{ 'localization.update_country' | t }}</button>
-              {%- endform -%}
-            </noscript>
-            <localization-form>
-              {%- form 'localization', id: 'FooterCountryForm', class: 'localization-form' -%}
-                <div class="no-js-hidden">
-                  <h2 class="caption-large text-body" id="FooterCountryLabel">{{ 'localization.country_label' | t }}</h2>
-                  {%- render 'country-localization', localPosition: 'FooterCountry' -%}
-                </div>
-              {%- endform -%}
-            </localization-form>
-          {%- endif -%}
-  
-          {%- if section.settings.enable_language_selector and localization.available_languages.size > 1 -%}
-            <noscript>
-              {%- form 'localization', id: 'FooterLanguageFormNoScript', class: 'localization-form' -%}
-                <div class="localization-form__select">
-                  <h2 class="visually-hidden" id="FooterLanguageLabelNoScript">
-                    {{ 'localization.language_label' | t }}
-                  </h2>
-                  <select
-                    class="localization-selector link"
-                    name="locale_code"
-                    aria-labelledby="FooterLanguageLabelNoScript"
-                  >
-                    {%- for language in localization.available_languages -%}
-                      <option
-                        value="{{ language.iso_code }}"
-                        lang="{{ language.iso_code }}"
-                        {%- if language.iso_code == localization.language.iso_code %}
-                          selected
-                        {% endif %}
-                      >
-                        {{ language.endonym_name | capitalize }}
-                      </option>
-                    {%- endfor -%}
-                  </select>
-                  {% render 'icon-caret' %}
-                </div>
-                <button class="button button--tertiary">{{ 'localization.update_language' | t }}</button>
-              {%- endform -%}
-            </noscript>
-  
-            <localization-form>
-              {%- form 'localization', id: 'FooterLanguageForm', class: 'localization-form' -%}
-                <div class="no-js-hidden">
-                  <h2 class="caption-large text-body" id="FooterLanguageLabel">
-                    {{ 'localization.language_label' | t }}
-                  </h2>
-                  {%- render 'language-localization', localPosition: 'FooterLanguage' -%}
-                </div>
-              {%- endform -%}
-            </localization-form>
-          {%- endif -%}
-        </div>
         <div class="footer__column footer__column--info">
           {%- if section.settings.payment_enable -%}
             <div class="footer__payment">
