--- a/snippets/language-localization.liquid
+++ b/snippets/language-localization.liquid
@@ -5,7 +5,10 @@
     - localPosition: pass in the position in which the form is coming up to create specific IDs
 {%- endcomment -%}
 
-<div class="disclosure">
+<div class="disclosure {% if custom_class %}{{ custom_class }}{% endif %}">
+  {%- if show_globe_icon -%}
+    {% render 'icon-globe' %}
+  {%- endif -%}
   <button
     type="button"
     class="disclosure__button localization-form__select localization-selector link link--text caption-large"
